#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

JG-2012-02-28-0: Bugfix:      qalter -v still allowed setting LD_PRELOAD and
                              similar environment variables.
                 Issue:       GE-3761
                 Review:      MD
                 Belongs to:  JG-2012-02-14-0

JG-2012-02-14-0: Bugfix:      security hole in UGE when setting LD_PRELOAD or
                              LD_LIBRARY or similar environment variables.
                              Reported by William Hay (w.hay@ucl.ac.uk).
                 Issue:       GE-3761
                 Review:      MD

DG-2011-06-06-0: Cleanup:     aimk compiles uge-extensions when found
                              per default
                 Review:      HP

HP-2011-05-31-0: Bugfix:      fstype binary doesn't detect NFS4 on Linux if the
                              mountpoint is deeper than one directory
                 Issue:       GE-3505
                 Review:      SH

JG-2011-05-31-2: Enhancem.:   evaluate / fix / improve the spooling performance
                              tests - part 1: added csv output
                 Issue:       GE-3363
                 Review:      EB

JG-2011-05-31-1: Enhancem.:   mark reporting_params log_consumables as
                              deprecated in the man page sge_conf.5
                 Issue:       GE-3497
                 Review:      EB

JG-2011-05-31-0: Bugfix:      o workaround optimizer bug of Sun Studio 9 on
                                Solaris Sparc 64
                              o fix building with gcc on Solaris
                 Issue:       GE-3468