@@ -8,6 +8,13 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+JG-2012-06-01-0: Bugfix:      pe array jobs put queues in error state with a
+                              file not found error for the job script
+                              Fix based on a contribution by
+                              Mark Dixon (m.c.dixon@leeds.ac.uk).
+                 Issue:       GE-3746
+                 Review:      HP
+
 JG-2012-02-28-0: Bugfix:      qalter -v still allowed setting LD_PRELOAD and
                               similar environment variables.
                  Issue:       GE-3761
